Update hero subtitle with pikk-konfetti

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="hero-content">
       <span class="hero-badge">🇳🇴 Norges frekkeste gave</span>
       <h1>Send en pikk<br>til noen som<br>fortjener det.</h1>
-      <p class="hero-sub">Anonymt. Morsomt. Garantert pinlig. Godteri-pikker levert rett i postkassen til din favoritt-fiende (eller bestevenn).</p>
+      <p class="hero-sub">Anonymt. Morsomt. Garantert pinlig. Godteri-pikker og pikk-konfetti levert rett i postkassen til din favoritt-fiende (eller bestevenn).</p>
       <div class="hero-actions">
         <a href="#products" class="btn btn-primary">🍬 Se produkter</a>
         <a href="#how-it-works" class="btn btn-ghost">Slik fungerer det →</a>
